tests/errors/wrong_val_57/e4.src
.IPPcode21

Exit int@-1